--- a/global.css
+++ b/global.css
@@ -43,3 +43,13 @@ a:hover {
     animation: all 1s ease-in-out;
     scale: 1.1;
 }
+
+#loader {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: black;
+    z-index: 100000000;
+}
