--- a/style2.css
+++ b/style2.css
@@ -185,14 +185,15 @@
 
 .loaderText>h1 {
     font-family: Anton;
-    text-transform: capitalize;
-    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-size: 1.3rem;
 }
 
 .loaderText>p {
     font-family: "Gelex";
-    text-transform: capitalize;
-    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    opacity: 0.8;
 }
 
 @keyframes scale {
