--- a/responsive.css
+++ b/responsive.css
@@ -278,7 +278,9 @@
     }
 
     .heroTitle>h1 {
-        margin-top: 3rem;
+        margin-top: 1rem;
+        line-height: 4.5rem;
+
         font-size: 4rem;
         letter-spacing: 0.5rem;
     }
@@ -286,6 +288,8 @@
     .heroTitle>p {
         font-size: 1.2rem;
         line-height: 1.7rem;
+
+        padding-left: 0;
     }
 
     .heroTitle {
@@ -406,14 +410,18 @@
 }
 
 @media (max-width: 575.98px) {
+    .thecomicCon>img {
+        width:70vw;
+    }
     .contextText2 {
         margin-top: 22rem;
         margin-left: 0rem;
     }
 
     .heroTitle>p {
-        font-size: 1.1rem;
-        line-height: 1.7rem;
+        margin-top: 0.3rem;
+        font-size: 1rem;
+        line-height: 1.3rem;
         opacity: 1;
     }
 
