--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@
 .heroTitle>h1 {
     font-family: Anton;
     font-size: 12rem;
+    line-height: 14rem;
+    padding-top: 4rem;
     font-size: clamp(3rem, 10vw, 12rem);
     letter-spacing: 0.5rem;
     text-transform: uppercase;
@@ -77,12 +79,13 @@
 
 .heroTitle>p {
     font-family: "Gelex";
-    font-size: 2rem;
+    font-size: 1.6rem;
     letter-spacing: 0.2rem;
     text-transform: uppercase;
     width: 100%;
-    line-height: 2.5rem;
+    line-height: 2rem;
     opacity: 0.8;
+    padding-left: 1rem;
 
     text-shadow: 4px 4px 30px rgba(0, 0, 0, 0.6);
 }
@@ -111,7 +114,8 @@
 
 .slideContent>h1 {
     font-family: Anton;
-    font-size: 2rem;
+    font-smooth: always;
+    font-size: 1.5rem;
     letter-spacing: 0.8rem;
     text-transform: uppercase;
     color: var(--yellow);
@@ -120,9 +124,9 @@
 
 .hollow {
     color: rgba(0, 0, 0, 0) !important;
-    -webkit-text-stroke: 2px var(--yellow);
-    text-stroke: 2px var(--yellow);
-    text-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+    -webkit-text-stroke: 1px var(--yellow);
+    text-stroke: 1px var(--yellow);
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
 .slideContent>img {
@@ -212,8 +216,8 @@
 .contextText>h1 {
     font-family: Anton;
     color: var(--yellow);
-    font-size: 12rem;
-    line-height: 12rem;
+    font-size: 8rem;
+    line-height: 10rem;
 
     color: rgba(0, 0, 0, 0) !important;
     -webkit-text-stroke: 5px var(--yellow);
@@ -223,8 +227,8 @@
 .contextText>div>h1 {
     display: inline-block;
     font-family: Anton;
-    font-size: 4rem;
-    line-height: 4rem;
+    font-size: 3rem;
+    line-height: 3.5rem;
     text-transform: uppercase;
     color: var(--yellow);
 
@@ -232,9 +236,9 @@
 }
 
 .contextText>div>p {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     font-family: "Gelex";
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     letter-spacing: 0.1rem;
     text-transform: uppercase;
     width: 100%;
@@ -291,7 +295,7 @@
     font-size: 30rem;
     line-height: 32rem;
     letter-spacing: 2rem;
-    color: rgba(0, 0, 0, 0.4) !important;
+    color: rgba(0, 0, 0, 0) !important;
     -webkit-text-stroke: 1px var(--yellow);
     text-stroke: 1px var(--yellow);
     opacity: 0.5;
@@ -356,11 +360,12 @@
 
 .curosolTitle {
     font-family: Anton;
-    font-size: 10rem;
+    font-size: 8rem;
     letter-spacing: 0.5rem;
     text-transform: uppercase;
     color: black;
-    text-shadow: 4px 4px 30px rgba(0, 0, 0, 0.6);
+    padding-bottom: 2rem;
+    text-shadow: 4px 4px 50px rgba(0, 0, 0, 0.4);
 }
 
 .StupidBtn,
