--- a/style2.css
+++ b/style2.css
@@ -106,7 +106,7 @@
 }
 
 .links>a>img {
-    height: 2.5rem;
+    height: 1.6rem;
 }
 
 .modelTextCon {
@@ -123,8 +123,8 @@
 
 .modelText>h1 {
     font-family: Anton;
-    font-size: 7rem;
-    line-height: 7rem;
+    font-size: 5rem;
+    line-height: 5rem;
     letter-spacing: 0.2rem;
     text-transform: uppercase;
     color: var(--yellow);
@@ -137,10 +137,10 @@
 
 .modelText>p {
     font-family: "Gelex";
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     width: 40vw;
-    line-height: 2rem;
-    letter-spacing: 0.5rem;
+    line-height: 1.5rem;
+    letter-spacing: 0.2rem;
     text-transform: uppercase;
     margin-bottom: 1rem;
     border-bottom: 2px solid var(--yellow);
@@ -174,7 +174,7 @@
 
 .loaderText {
     position: absolute;
-    bottom: 0;
+    bottom: 15%;
     width: 100vw;
     padding-block: 5rem;
     display: flex;
