--- a/style.css
+++ b/style.css
@@ -144,6 +144,10 @@
     }
 }
 
+.scollbody {
+    will-change: contents;
+}
+
 .slide {
     width: 100vw;
     height: 100lvh;
@@ -153,7 +157,7 @@
     top: 0;
     left: 0;
     clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
-
+    will-change: scroll-position;
     /* mask: url("/Aquatica/mask4.webp"); */
     /* mask-size: 100% auto; */
     /* mask-size: 100vh 100vw; */
@@ -190,7 +194,8 @@
 }
 
 .slide5 {
-    background: #182026;
+    background: #172832;
+    /* background: #182026; */
     z-index: 500;
 }
 
@@ -243,7 +248,7 @@
     text-transform: uppercase;
     width: 100%;
     line-height: 1.3rem;
-
+    word-wrap: nowrap;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 1);
 }
 
