--- a/style2.css
+++ b/style2.css
@@ -168,7 +168,7 @@
     justify-content: center;
 }
 
-.loaderImg>img:nth-child(1) {
+.loaderImg>img {
     animation: scale 2s linear infinite;
 }
 
@@ -192,6 +192,7 @@
 .loaderText>p {
     font-family: "Gelex";
     text-transform: uppercase;
+    text-align: center;
     font-size: 1.1rem;
     opacity: 0.8;
 }
