--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
     will-change: scroll-position;
     perspective: 1000px;
     /* mask: url("/Aquatica/mask4.webp"); */
