--- a/responsive.css
+++ b/responsive.css
@@ -576,6 +576,7 @@
         overflow: hidden;
         position: relative;
         position: absolute;
+        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
         top: 0;
         left: 0;
         display: flex;
