--- a/responsive.css
+++ b/responsive.css
@@ -234,8 +234,8 @@
     }
 
     .catCard:hover>div>h1 {
-        transform: rotate(0deg) translateX(0rem) translateY(0%)!important;
-        transform-origin: 0% -50%!important;
+        transform: rotate(0deg) translateX(0rem) translateY(0%) !important;
+        transform-origin: 0% -50% !important;
     }
 
     .activeCard>p {
@@ -626,5 +626,9 @@
         font-size: 3rem;
         letter-spacing: 0.5rem;
         margin-bottom: 3rem;
+    }
+
+    .mobDis {
+        display: none !important;
     }
 }
