--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@
     padding-top: 4rem;
     font-size: clamp(3rem, 10vw, 12rem);
     letter-spacing: 0.5rem;
+    text-wrap: balance;
     text-transform: uppercase;
     text-shadow: 4px 4px 30px rgba(0, 0, 0, 0.3);
 }
@@ -129,7 +130,8 @@
     color: rgba(0, 0, 0, 0) !important;
     -webkit-text-stroke: 1px var(--yellow);
     /* text-stroke: 1px var(--yellow); */
-    text-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+    /* text-shadow: 0 0 1px rgba(0, 0, 0, 0.1); */
+
 }
 
 .slideContent>img {
