--- a/style2.css
+++ b/style2.css
@@ -33,6 +33,7 @@
 .socialCon {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 4rem;
     width: fit-content;
 }
