--- a/responsive.css
+++ b/responsive.css
@@ -259,7 +259,7 @@
     }
 
     .inactiveCard>div>h1 {
-        transform: rotate(-90deg) translateX(-9rem) translateY(-30%) !important;
+        transform: rotate(-90deg) translateX(-9rem) translateY(-60%) !important;
         font-size: 1.5rem;
     }
 
@@ -456,15 +456,35 @@
         margin-left: 0rem;
     }
 
+    .heroTitle>h1 {
+        margin-top: 0.5rem;
+        line-height: 4rem;
+
+        font-size: 3.5rem;
+        letter-spacing: 0.5rem;
+    }
+
     .heroTitle>p {
-        margin-top: 0.3rem;
-        font-size: 1rem;
-        line-height: 1.3rem;
-        opacity: 1;
+        margin-top: 1rem;
+        font-size: 0.9rem;
+        line-height: 1.2rem;
+        opacity: 0.8;
     }
 
     .slide1 {
-        background-position-x: 20%;
+        background-position-x: 10%;
+    }
+
+    .slide2 {
+        background-position-x: 40%;
+    }
+
+    .slide3 {
+        background-position-x: 60%;
+    }
+
+    .slide4 {
+        background-position-x: 40%;
     }
 
     .contextText>div {
@@ -472,9 +492,10 @@
     }
 
     .contextText>h1 {
-        font-size: 4rem;
-        line-height: 4rem;
-        letter-spacing: 1rem;
+        font-size: 4.5rem;
+        line-height: 5rem;
+        letter-spacing: 0.5rem;
+        -webkit-text-stroke: 2px var(--yellow);
     }
 
     .contextText>div>h1 {
@@ -487,7 +508,7 @@
     .contextText>div>p {
         margin-top: 0;
         width: 100%;
-        text-wrap: nowrap;
+        text-wrap: balance;
         font-size: 0.7rem;
         letter-spacing: 0.1rem;
         line-height: 1rem;
@@ -515,7 +536,7 @@
 
     .bgText1>*,
     .bgText2>* {
-        font-size: 20rem;
+        font-size: 15rem;
         line-height: 20rem;
         letter-spacing: 2rem;
     }
@@ -553,15 +574,20 @@
         /* text-wrap: nowrap; */
     }
 
+    .socialCon {
+        gap: 3.5rem;
+    }
+
     .socialCon>h1,
     .socialCon>h1>span {
-        font-size: 2.8rem;
-        line-height: 2.8rem;
+        font-size: 2.4rem;
+        line-height: 2.4rem;
+        letter-spacing: 0.2rem;
         text-align: center;
     }
 
     .socialCon>form {
-        width: 26rem;
+        width: 24rem;
         height: 4.5rem;
     }
 
@@ -630,5 +656,9 @@
 
     .mobDis {
         display: none !important;
+    }
+
+    .catCard {
+        height: 28rem;
     }
 }
