--- a/global.css
+++ b/global.css
@@ -13,8 +13,7 @@
 html {
     overflow-x: hidden;
     height: 100svh;
-
-
+    width: 100vw;
     background-color: var(--background-color);
 }
 
@@ -58,50 +57,49 @@ a:hover {
     z-index: 100000000;
 }
 
-nav {
-    position: fixed;
-    top: 0;
-    background: green;
-    z-index: 10000;
-}
-
 .catCard1 {
-  background: url("/Aquatica/cat/1.png");
+    background: url("/Aquatica/cat/1.png");
 }
 
 .catCard2 {
-  background: url("/Aquatica/cat/2.png");
+    background: url("/Aquatica/cat/2.png");
 }
+
 .catCard3 {
-  background: url("/Aquatica/cat/3.png");
+    background: url("/Aquatica/cat/3.png");
 }
+
 .catCard4 {
-  background: url("/Aquatica/cat/4.png");
+    background: url("/Aquatica/cat/4.png");
 }
+
 .catCard5 {
-  background: url("/Aquatica/cat/5.png");
+    background: url("/Aquatica/cat/5.png");
 }
+
 .catCard6 {
-  background: url("/Aquatica/cat/6.png");
+    background: url("/Aquatica/cat/6.png");
 }
+
 .catCard7 {
-  background: url("/Aquatica/cat/7.png");
+    background: url("/Aquatica/cat/7.png");
 }
+
 .catCard8 {
-  background: url("/Aquatica/cat/8.png");
+    background: url("/Aquatica/cat/8.png");
 }
 
 .catCard9 {
-  background: url("/Aquatica/cat/9.png");
+    background: url("/Aquatica/cat/9.png");
 }
+
 .catCard10 {
-  background: url("/Aquatica/cat/10.png");
+    background: url("/Aquatica/cat/10.png");
 }
+
 .catCard11 {
-  background: url("/Aquatica/cat/11.png");
+    background: url("/Aquatica/cat/11.png");
 }
-
-
 
 /* // lenis code  */
 html.lenis {
@@ -124,4 +122,43 @@ html.lenis {
     pointer-events: none;
 }
 
+@media screen and (max-width: 700px) {
+    .navCon {
+        display: none;
+    }
+}
 
+nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000000;
+    height: 100vh;
+}
+
+.navCon {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    gap: 3rem;
+}
+
+.navCon>div {
+    width: 8px;
+    height: 8px;
+
+    border-radius: 100%;
+
+    background: white;
+    opacity: 0.7;
+    animation: all 1s ease-in-out;
+}
+
+.navCon>div:hover,
+.activeNavCom {
+    opacity: 1!important;
+    scale: 1.2!important;
+}
