--- a/global.css
+++ b/global.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     font-family: "Big Shoulders Display", sans-serif;
     letter-spacing: 0.15rem;
+    font-smooth: 2em;
 }
 
 html {
@@ -160,7 +161,7 @@ nav {
     margin-right: 2rem;
     width: 12px;
     height: 12px;
-    
+
     border: 1px solid var(--yellow);
 
     opacity: 0.7;
@@ -169,14 +170,19 @@ nav {
     background: white;
 }
 
-.navTitle{
+.navTitle {
     font-size: 1.2rem;
     font-family: "Anton";
     color: white;
+    /* background: green; */
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     cursor: pointer;
     opacity: 0;
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
+    border-radius: 0.5rem;
+    backdrop-filter: blur(5px) brightness(0.9);
 }
 
 .navCon>div>div:hover,
@@ -184,4 +190,3 @@ nav {
     opacity: 1 !important;
     scale: 1.2 !important;
 }
-
