--- a/global.css
+++ b/global.css
@@ -145,6 +145,9 @@ nav {
     align-items: center;
     /* width: 20rem; */
     gap: 3rem;
+    width: 2rem;
+    /* background: green; */
+    overflow: visible;
 }
 
 .navCon>div {
@@ -159,8 +162,8 @@ nav {
 
 .navCon>div>div {
     margin-right: 2rem;
-    width: 12px;
-    height: 12px;
+    width: 12px!important;
+    height: 12px!important;
 
     border: 1px solid var(--yellow);
 
@@ -168,6 +171,10 @@ nav {
     border-radius: 100%;
 
     background: white;
+}
+
+.navCon>div>div> * {
+    opacity: 0;
 }
 
 .navTitle {
@@ -182,7 +189,9 @@ nav {
     padding-inline: 1rem;
     padding-block: 0.5rem;
     border-radius: 0.5rem;
-    backdrop-filter: blur(5px) brightness(0.9);
+    backdrop-filter: blur(5px) brightness(0.7);
+
+    pointer-events: none;
 }
 
 .navCon>div>div:hover,
