--- a/style2.css
+++ b/style2.css
@@ -61,7 +61,8 @@
 }
 
 .socialCon>form {
-    height: 8rem;
+    height: 7.3rem;
+    width: 100%;
 }
 
 .socialCon>form {
@@ -87,6 +88,7 @@
 
 .socialCon>form>button {
     border: none;
+    z-index: 100;
     background: var(--yellow);
     font-family: Anton;
     font-size: 2.5rem;
