--- a/style.css
+++ b/style.css
@@ -231,10 +231,10 @@
     gap: 1.5rem;
     position: relative;
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.25);
+    /* background-color: rgba(0, 0, 0, 0.25); */
     width: fit-content;
     border-radius: 10px;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(3px);
     padding: 1rem;
 }
 
