--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@
     left: 0;
     clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
     -webkit-clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
-    /* will-change: scroll-position; */
+    will-change: scroll-position;
     /* perspective: 1000px; */
     /* mask: url("/Aquatica/mask4.webp"); */
     /* mask-size: 100% auto; */
