--- a/style2.css
+++ b/style2.css
@@ -218,3 +218,47 @@
         transform: scale(1);
     }
 }
+
+.presaleBtn {
+    color: black;
+    text-decoration: none;
+    /* background: var(--yellow); */
+    font-family: Anton;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    background: linear-gradient(-90deg, rgba(255, 255, 255, 1) 70%, rgba(0, 0, 0, 0) 100%);
+
+    padding-inline: 2rem;
+    padding-block: 0.8rem;
+    margin-left: 0.5rem;
+}
+
+.heroTitle > p {
+    padding-bottom: 1.5rem;
+}
+
+.presaleBtn:hover {
+    background: linear-gradient(-90deg, rgba(255, 255, 255, 1) 75%, rgba(0, 0, 0, 0) 100%);
+}
+
+.topImgCon {
+    margin-top: 2rem;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    width: fit-content;
+    gap: 1rem;
+
+    margin-left: 0.5rem;
+}
+.TopImg {
+    height: 1.6rem;
+}
+.telegram {
+    height: 2rem!important;
+}
+
+.colorInvert {
+    filter: invert(100%);
+    -webkit-filter: invert(100%);
+}
