--- a/responsive.css
+++ b/responsive.css
@@ -7,7 +7,7 @@
 
 @media (max-width: 1500px) {
     .heroTitle>h1 {
-        font-size: 8rem;
+        font-size: 6rem;
         letter-spacing: 0.5rem;
     }
 
@@ -39,7 +39,8 @@
 @media (max-width: 1200px) {
     .heroTitle>h1 {
         margin-top: 3rem;
-        font-size: 7rem;
+        font-size: 5rem;
+        line-height: 6rem;
         letter-spacing: 0.5rem;
     }
 
@@ -264,7 +265,6 @@
         font-size: 1.5rem;
     }
 
-    
     .catCard:hover {
         padding-left: 0.7rem;
     }
@@ -273,6 +273,7 @@
         padding-left: 0.7rem;
         /* padding-right: 0.5rem; */
     }
+
     .catCard>div>h1 {
         transform: rotate(0deg) translateX(0rem) translateY(0%);
         font-size: 1.5rem;
@@ -336,6 +337,13 @@
     .slideContent>h1 {
         font-size: 1.5rem;
         letter-spacing: 0.8rem;
+    }
+
+    .presaleBtn {
+        font-size: 1.2rem;
+        padding-inline: 2.5rem;
+        padding-block: 0.7rem;
+        margin-left: 0.3rem;
     }
 
     .contextText1 {
@@ -479,7 +487,7 @@
     }
 
     .heroTitle>h1 {
-        margin-top: 0.5rem;
+        margin-top: 2.5rem;
         line-height: 4rem;
 
         font-size: 3.5rem;
@@ -508,6 +516,7 @@
     .slide4 {
         background-position-x: 37%;
     }
+
     .contextText>div {
         margin-top: 0;
     }
