--- a/style2.css
+++ b/style2.css
@@ -222,24 +222,25 @@
 .presaleBtn {
     color: black;
     text-decoration: none;
-    /* background: var(--yellow); */
+    background: var(--yellow);
     font-family: Anton;
     text-transform: uppercase;
-    font-size: 1.3rem;
-    background: linear-gradient(-90deg, rgba(255, 255, 255, 1) 70%, rgba(0, 0, 0, 0) 100%);
+    font-size: 1.4rem;
+    /* background: linear-gradient(-90deg, rgba(255, 255, 255, 1) 70%, rgba(0, 0, 0, 0) 100%); */
 
-    padding-inline: 2rem;
-    padding-block: 0.8rem;
-    margin-left: 0.5rem;
+    transition: background 0.5s ease;
+    padding-inline: 2.5rem;
+    padding-block: 0.7rem;
+    margin-left: 0.7rem;
 }
 
 .heroTitle > p {
     padding-bottom: 1.5rem;
 }
-
-.presaleBtn:hover {
-    background: linear-gradient(-90deg, rgba(255, 255, 255, 1) 75%, rgba(0, 0, 0, 0) 100%);
-}
+/**/
+/* .presaleBtn:hover { */
+/*     background: linear-gradient(-90deg, rgba(255, 255, 255, 1) 75%, rgba(0, 0, 0, 0) 100%); */
+/* } */
 
 .topImgCon {
     margin-top: 2rem;
